Fixed overflow issues in container/side menu

--- a/php/public/css/side-menu.css
+++ b/php/public/css/side-menu.css
@@ -75,3 +75,17 @@
   margin-bottom: 8px;
   cursor: pointer;
 }
+
+@media only screen and (min-width: 481px) and (max-width: 768px){
+
+  .side-menu{
+    width: calc(40% - 2px) !important;
+  }
+}
+
+@media only screen and (max-width: 480px){
+
+  .side-menu{
+    width: calc(50% - 2px);
+  }
+}
